--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/8a7e4709-0b83-4d16-9b94-df2085373913.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Face Recognition App by Museya</title>
   </head>
